.k8s/kube-system/Ingress.kube-lego-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0,::/0
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.provider: nginx
    kubernetes.io/tls-acme-challenge-endpoints: "true"
  creationTimestamp: null
  generation: 1
  name: kube-lego-nginx
  selfLink: /apis/extensions/v1beta1/namespaces/kube-system/ingresses/kube-lego-nginx
spec:
  rules:
  - host: api.unicode.wiki
    http:
      paths:
      - backend:
          serviceName: kube-lego-nginx
          servicePort: 8080
        path: /.well-known/acme-challenge
  - host: unicode.wiki
    http:
      paths:
      - backend:
          serviceName: kube-lego-nginx
          servicePort: 8080
        path: /.well-known/acme-challenge
  - host: www.unicode.wiki
    http:
      paths:
      - backend:
          serviceName: kube-lego-nginx
          servicePort: 8080
        path: /.well-known/acme-challenge
status:
  loadBalancer: {}
